--- a/pug/head.pug
+++ b/pug/head.pug
@@ -9,9 +9,8 @@ html(lang="en")
 
     //Main css
     link(rel='stylesheet', href="css/main.css")
-    // Page css
-    link(rel='stylesheet', href="css/"+currentPage+".css")
 
+    script(src='js/jquery-2.2.4.min.js')
     base(href='/')
     // HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
     // WARNING: Respond.js doesn't work if you view the page via file://
