Prepared frontend environment

--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -9,5 +9,5 @@ body.page
   footer.page__footer
     block footer
       Some page footer content
-  // Main JS
-  script(src='js/main.js')
+  // Bundle JS
+  script(src='js/bundle.js')
