--- a/src/pug/head.pug
+++ b/src/pug/head.pug
@@ -7,10 +7,8 @@ html(lang="en")
     // The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags 
     title= currentPage
 
-    //Main css
-    link(rel='stylesheet', href="css/main.css")
-
-    script(src='js/jquery-2.2.4.min.js')
+    //Bundle css
+    link(rel='stylesheet', href="css/bundle.css")
     base(href='/')
     // HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
     // WARNING: Respond.js doesn't work if you view the page via file://
