--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -4,3 +4,34 @@ $light-gray-color: #f0f0f0;
 $brown-color: #c4b9ab;
 $menu-link-color: #9d9d9d;
 $disabled: #cccccc;
+
+$breakpoints: (
+    'xs': 480px,
+    'sm': 768px,
+    'md': 992px,
+    'lg': 1200px,
+    'xlg': 1600px,
+);
+
+// --------------------------------------------------
+// Reflex grid variables
+// --------------------------------------------------
+
+// Prefix
+// -------------------------
+// You can optionally reflex-prefix reflex classes to avoid clashing with other css frameworks
+// e.g. setting $reflex-prefix as "reflex-" here would cause grid__col-sm-6 to become reflex-grid__col-sm-6
+// Example: $reflex-prefix: reflex-;
+// By default this is an empty string
+// $reflex-prefix: null;
+
+// Grid
+// -------------------------
+$reflex-columns: 12; // number of columns
+$reflex-max-width: 1200px; // max-width of grid
+
+$reflex-xs: map-get($breakpoints, xs);
+$reflex-sm: map-get($breakpoints, sm);
+$reflex-md: map-get($breakpoints, md);
+$reflex-lg: map-get($breakpoints, lg);
+$reflex-xlg: map-get($breakpoints, xlg);
