--- a/src/pug/blocks/menu.pug
+++ b/src/pug/blocks/menu.pug
@@ -11,7 +11,7 @@
     {'title': 'Партнеры', 'url': '#'}]
   },
   {'title': 'Контакты', 'url': '#'}]
-nav.menu
+nav.menu.menu_top
   .logo__container
     img.logo(src='img/logo.png')
   ul.menu__list.menu__list_fluid
