--- a/src/pug/pages/complectacia.pug
+++ b/src/pug/pages/complectacia.pug
@@ -1,7 +1,8 @@
 extends ../layout.pug
 
 block content
-  include ../blocks/content
+  main.page__content
+    include ../blocks/content
   
 
     
