--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 //Pages
 @import 'pages/_complectacia';
 //Blocks
+@import 'blocks/_link';
 @import 'blocks/_page';
 @import 'blocks/_grid';
 @import 'blocks/_menu';
