--- a/src/scss/_palette.scss
+++ b/src/scss/_palette.scss
@@ -1,6 +1,8 @@
 $text-color: #000000;
 $muted: #666666;
-$primaty: #00ffff;
+$primary: #00ffff;
 $success: #40ff00;
 $black:#000;
 $white: #fff;
+$grey: #cccccc;
+$dark-grey: #414142;
