--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -62,4 +62,11 @@ $reflex-md: map-get($breakpoints, md);
 $reflex-lg: map-get($breakpoints, lg);
 $reflex-xlg: map-get($breakpoints, xlg);
 
+// Spacing
+// -------------------------
+$reflex-grid-spacing:       0em 1em !default;
+$reflex-cell-spacing:       1em !default;
 
+$reflex-cell-spacing-sm:    ($reflex-cell-spacing / 2);
+$reflex-cell-spacing-md:    $reflex-cell-spacing;
+$reflex-cell-spacing-lg:    ($reflex-cell-spacing * 2);
