--- a/src/scss/blocks/_menu.scss
+++ b/src/scss/blocks/_menu.scss
@@ -2,6 +2,11 @@
   &_top {
     font-size: 12px;
     display: flex;
+    align-items: center;
+  }
+  &__list_top {
+    display: table;
+    width: 100%;
   }
   &__list,
   &__list_submenu {
@@ -9,7 +14,10 @@
     padding: 0;
   }
   &__list_submenu {
+    text-align: center;
+    border: 2px solid $black;
     visibility: hidden;
+    background-color: $white;
     /* hides sub-menu */
     opacity: 0;
     position: absolute;
@@ -20,13 +28,19 @@
     z-index: -1;
     transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
   }
-  &__list_fluid {
-    flex: 1;
-  }
   &__item {
-    display: inline-block;
     list-style-type: none;
+  }
+  &__item_top {
+    display: table-cell;
     position: relative;
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  &__item_top:hover {
+    cursor: pointer;
+    background-color: $dark-grey;
   }
   &__item_parent:hover>&__list_submenu {
     visibility: visible;
@@ -37,8 +51,24 @@
     transition-delay: 0s, 0s, 0.3s;
     /* this removes the transition delay so the menu will be visible while the other styles transition */
   }
-  &__link {
+  &__link_top {
+    display: inline-block;
+    color: $white;
     padding-top: 20px;
     padding-bottom: 20px;
+  }
+  &__link_submenu {
+    display: inline-block;
+    color: $black;
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+  &__link_active {
+    color: $primary;
+  }
+  &__icon_cart,
+  &__icon_search {
+    color: $white;
+    font-size: 28px;
   }
 }
