Started working with product block...

--- a/src/pug/blocks/menu.pug
+++ b/src/pug/blocks/menu.pug
@@ -12,7 +12,7 @@
   },
   {'title': 'Контакты', 'url': '#'}]
 nav.menu.menu_top.grid
-  .grid__col-md-2.grid__col-sm-2
+  .grid__col-md-2.grid__col-sm-2.grid__col--bleed
     a.logo__container(href='#')
       img.logo(src='img/logo.png')
   .grid__col-md-8.grid__col-sm-8
