--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,9 +12,10 @@
 //Import font-awesome
 @import 'reflex-grid/scss/reflex';
 //Pages
-@import 'pages/_complectacia';
+@import 'pages/_product';
 //Blocks
 @import 'blocks/_link';
 @import 'blocks/_page';
 @import 'blocks/_grid';
 @import 'blocks/_menu';
+@import 'blocks/_breadcrumbs';
