--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -1,10 +1,12 @@
 include head
-include blocks/availability
+include /components/footer/footer
+include /components/header/header
+
 body.page
   block header
-    include includes/header
+    +header
   block content
   block footer
-    include includes/footer
+    +footer
   // Bundle JS
   script(src='js/bundle.js')
