Added some styles

--- a/src/components/availability/_availability.scss
+++ b/src/components/availability/_availability.scss
@@ -1,10 +1,12 @@
 .availability {
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   position: relative;
   font-size: 11px;
   font-weight: 100;
   max-width: 105px;
-  
+  min-width: 105px;
   &_available {
     color: $success;
   }
