--- a/src/components/product/product.pug
+++ b/src/components/product/product.pug
@@ -56,5 +56,9 @@ mixin product
           i.fa.fa-plus.product__qty-cntr.active
         h3.product__price
           |8 594,80 р
-        button.button.product__button-buy
+        button.button.button_primary(type="button")
           |Купить 
+        a(href="#").link.product__link.product__link_text
+          |Перейти в корзину
+        a(href="#").link.product__link.product__link_text
+          |Продолжить покупки
