--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@
 @import 'reflex-grid/scss/reflex';
 //Blocks
 @import 'link/_link';
+@import 'button/_button';
 @import 'page/_page';
 @import 'grid/_grid';
 @import 'menu/_menu';
