--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 //Import font-awesome
 @import 'reflex-grid/scss/reflex';
 //Blocks
+@import 'image/_image';
 @import 'link/_link';
 @import 'button/_button';
 @import 'page/_page';
