--- a/src/components/availability/_availability.scss
+++ b/src/components/availability/_availability.scss
@@ -1,6 +1,7 @@
 .availability {
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 24px;
   text-align: center;
   position: relative;
   font-size: 11px;
