--- a/src/scss/_palette.scss
+++ b/src/scss/_palette.scss
@@ -2,6 +2,7 @@ $text-color: #000000;
 $muted: #666666;
 $primary: #00ffff;
 $bg-strip: #cceffc;
+$bg-related: #f2f1f1;
 $success: #40ff00;
 $black:#000;
 $white: #fff;
