--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,8 +16,12 @@
 @import 'link/_link';
 @import 'button/_button';
 @import 'page/_page';
+@import 'utils/_utils';
 @import 'grid/_grid';
 @import 'menu/_menu';
 @import 'breadcrumbs/_breadcrumbs';
-@import 'product/_product';
 @import 'availability/_availability';
+@import 'product/_product';
+@import 'related/_related';
+@import 'features/_features';
+
