--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,3 +1,19 @@
 mixin footer
   footer.page__footer
-    | Page footer
+    .grid
+      .grid__col-md-6.grid__col--bleed
+        .footer__item.fa.fa-map-marker.footer__icon
+          |Россия, Ленинградская область,
+          br
+          |поселок Новоселье, Институтская ул. д. 1
+        .footer__item.fa.fa-phone.footer__icon
+          |8 (812) 244 20 66
+        .footer__item.fa.fa-envelope.footer__icon
+          |info@zenit-stp.ru
+      .grid__col-md-6.grid__col--bleed
+        .grid__cell
+          i.fa.fa-facebook.footer__icon.footer__icon_circle
+          i.fa.fa-vk.footer__icon.footer__icon_circle
+          i.fa.fa-linkedin.footer__icon.footer__icon_circle
+          
+        
