--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,7 @@
 @import 'link/_link';
 @import 'button/_button';
 @import 'page/_page';
+@import 'footer/_footer';
 @import 'utils/_utils';
 @import 'grid/_grid';
 @import 'menu/_menu';
