--- a/src/components/related/related.pug
+++ b/src/components/related/related.pug
@@ -20,7 +20,7 @@ mixin related
               else
                 +availability()
               .related__thumb
-                img(src='/img/'+currentPage+'/product__related.jpg')
+                img(src='img/'+currentPage+'/product__related.jpg')
               .related__item-title
                 |Z-in R25 100x100 830
               .related__price
