--- a/src/scss/_palette.scss
+++ b/src/scss/_palette.scss
@@ -1,9 +1,9 @@
 $text-color: #000000;
 $muted: #666666;
-$primary: #00ffff;
+$primary: #00aeef;
 $bg-strip: #cceffc;
 $bg-related: #f2f1f1;
-$success: #40ff00;
+$success: #39b54a;
 $black:#000;
 $white: #fff;
 $grey: #cccccc;
