--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,8 @@
 @import '_palette';
 //Settings
 @import '_settings';
+//Fonts
+@import '_fonts';
 //Normalize
 @import 'normalize-scss/sass/normalize';
 @include normalize();
