--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -4,6 +4,7 @@
   border-radius: 5px;
   margin-bottom: 24px;
   display: inline-block;
+  line-height: 1;
   &_primary {
     border: 1px solid $primary;
     color: $primary;
