--- a/src/components/product/_product.scss
+++ b/src/components/product/_product.scss
@@ -97,10 +97,14 @@
       border: 2px solid $black;
     }
     &__strip {
+      font-size: 11px;
       display: flex;
       background-color: $bg-strip;
-      padding: 10px;
+      padding: 7px  15px;
       justify-content: space-between;
+      line-height: 1;
+      align-content: center;
+      vertical-align: middle;
     }
     &__gallery {
       display: flex;
@@ -110,5 +114,8 @@
     }
     &__description-title {
       margin-bottom: 20px;
+    }
+    &__description{
+      font-weight: 100;
     }
   }
