--- a/src/components/related/_related.scss
+++ b/src/components/related/_related.scss
@@ -17,22 +17,25 @@
   &__button+&__button {
     margin-right: 15px;
   }
+  &__icon_num {
+    display: block;
+  }
   &__icon {
     position: relative;
-    padding-top: 7px;
-    padding-left: 7px;
     color: $black;
+    line-height: 30px;
+    text-align: center;
   }
   &__icon:after {
     position: absolute;
     width: 30px;
     height: 30px;
     top: 0;
-    left: 0;
+    left: -7px;
     content: '';
     display: block;
     border: 1px solid $black;
-    border-radius: 100%;
+    border-radius: 50%;
   }
   &__button:hover>&__icon {
     color: $primary;
@@ -65,14 +68,13 @@
     position: absolute;
     top: 50%;
     left: 0;
-    padding-top: 4px;
     padding-left: 5px;
   }
   &__footer-icon:after {
     position: absolute;
     width: 20px;
     height: 20px;
-    top: 0;
+    top: 3px;
     left: 0;
     content: '';
     display: block;
