--- a/src/components/breadcrumbs/_breadcrumbs.scss
+++ b/src/components/breadcrumbs/_breadcrumbs.scss
@@ -2,6 +2,7 @@
   font-size: 12px;
   padding-top: 40px;
   padding-bottom: 16px;
+  padding-left: 15px;
   &__list {
     margin: 0;
     padding: 0;
