--- a/src/pug/pages/product.pug
+++ b/src/pug/pages/product.pug
@@ -7,7 +7,7 @@ include /components/related/related
 include /components/features/features
 
 block content
-  main.page__content.grid__container
+  main.page__content
     +breadcrumbs
     +product
     .u--vrt-md
