--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -1,12 +1,46 @@
 .footer {
+  border-top: 3px solid $black;
+  padding-top: 12px;
+  &__item:first-child {
+    text-indent: -30px;
+    margin-left: 30px;
+  }
+  &__item:first-child:before {
+    padding-right: 20px;
+  }
   &__item {
+    color: $black;
     text-indent: -25px;
     margin-left: 25px;
+    margin-bottom: 9px;
   }
   &__item:before {
     padding-right: 15px;
   }
   &__icon:before {
     font-size: 20px;
+  }
+  &__item:last-child {
+    text-indent: -20px;
+    margin-left: 20px;
+  }
+  &__item:last-child:before {
+    padding-right: 10px;
+  }
+  &__icon{
+    color: $black;
+  }
+  &__icon_circle+&__icon_circle {
+    margin-left: 25px;
+  }
+  &__icon_circle {
+    width: 30px;
+    height: 30px;
+    border: 1px solid $black;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 30px;
+    vertical-align: middle;
+    text-align-last: center;
   }
 }
