Added some styles

--- a/src/components/newsblock/newsblock.pug
+++ b/src/components/newsblock/newsblock.pug
@@ -1,5 +1,15 @@
 mixin newsblock
+  - var n=0;
   .newsblock
-    .newsblock__title
+    a(href="#").newsblock__title
       |Новости &nbsp; 
       i.fa.fa-arrow-circle-o-right
+    while n < 2
+      .newsblock__item
+        -n++
+        a(href="#").newsblock__item-title
+          |Открывается ежегодная выставка, посвященная светодизайну! 
+        .newsblock__item-date
+          | 8 марта 2017
+        .newsblock__item-description
+          |Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit ullam neque, dolore accusantium explicabo distinctio nihil inventore beatae. Tempore numquam, reprehenderit repudiandae minus expedita temporibus earum voluptas ipsum molestiae eaque.
