--- a/src/components/newsblock/_newsblock.scss
+++ b/src/components/newsblock/_newsblock.scss
@@ -2,7 +2,23 @@
   border: 1px solid $black;
   padding: 30px 40px;
   &__title {
+    color: $black;
     font-size: 18px;
     font-weight: 600;
+  }
+  &__item-title {
+    color: $primary;
+    font-size: 12px;
+    font-weight: 500;
+    margin-bottom: 8px;
+  }
+  &__item-date {
+    font-size: 11px;
+    font-weight: 100;
+    margin-bottom: 8px;
+  }
+  &__item-description {
+    font-size: 11px;
+    font-weight: 100;
   }
 }
